# STARThack2026

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  brainstorming.txt  main.py  notes.txt  presentation.html  pyproject.toml  railway.env.example  railway.toml  slides.html  start.sh
ChainIQ-START-Hack-2026-/data/: categories.csv
api/: azure_client.py  data_loader.py  elevenlabs_client.py  interpreter.py  main.py  message_generator.py  models.py  pipeline.py  policy_rag.py  ranking_engine.py  ranking_llm.py  ranking_models.py  ranking_orchestrator.py  region_mapper.py  voice_parser.py
api/validators/: category_check.py  completeness.py  contradiction.py  lead_time.py  policy_rules.py  supplier_checker.py
backend/: requirements.txt
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  i18n.ts  index.css  main.tsx  types.ts
pipeline/01_intake/: input.yaml  output.yaml  portal.html
pipeline/02_checker/: checker.py  input.yaml  output.yaml  sample_input.json
pipeline/03_ranker/: input.yaml  output.yaml
pipeline/04_visualizer/: input.yaml  output.yaml  visualizer.html
silvio-ai-procurement/: package-lock.json
tests/: test_approval_thresholds.py  test_category_check.py  test_completeness.py  test_contradiction.py  test_edge_cases_integration.py  test_input_sanitization.py  test_lead_time.py  test_policy_rules.py  test_ranking_engine.py  test_rate_limiter.py  test_region_mapper.py  test_restricted_suppliers.py  test_supplier_checker.py
(+57 files in other folders)
